[DevTools] Fix filter checkbox/label alignment on Mac. EOM
BUG=157335

Review URL: https://chromiumcodereview.appspot.com/21067003

git-svn-id: svn://svn.chromium.org/blink/trunk@155255 bbb929c8-8fbe-4397-9dbb-9b2b20218538

--- a/front_end/inspector.css
+++ b/front_end/inspector.css
@@ -445,6 +445,10 @@ body.show-toolbar-icons.dock-to-bottom #toolbar-panels-menu {
     opacity: 1.0;
 }
 
+.toolbar-search label {
+    vertical-align: bottom;
+}
+
 .toolbar-search input[type="checkbox"] {
     position: relative;
     margin-top: -1px;
